grpc-angular/envoy.yaml
admin:
  access_log_path: "/tmp/admin_access.log"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
  - name: grpc_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8082
    filter_chains:
      - filters:
          - name: envoy.filters.network.http_connection_manager
            config:
              codec_type: AUTO
              stat_prefix: grpc_web
              route_config:
                name: local_route
                virtual_hosts:
                  - name: local_service
                    domains: ["*"]
                    routes:
                      - match:
                          prefix: "/"
                        route:
                          cluster: grpc_backend
                          max_grpc_timeout: 0s
              http_filters:
                - name: envoy.filters.http.grpc_web
                - name: envoy.filters.http.cors
                - name: envoy.filters.http.router
              cors:
                allow_origin_string_match:
                  - prefix: "*"
                allow_methods: GET, PUT, DELETE, POST, OPTIONS
                allow_headers: keep-alive,user-agent,cache-control,content-type,content-length
                expose_headers: custom-header-1,grpc-status,grpc-message
                max_age: "1728000"

  clusters:
  - name: grpc_backend
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    load_assignment:
      cluster_name: grpc_backend
      endpoints:
      - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: localhost  # Use localhost for macOS
                  port_value: 9090  # Your gRPC server's port
